# Football-Predictor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  core_predict.yml  core_predict_pr.yml  predict.yml  run-predict-manual.yml
data/: elo_ratings.json  fd_results.csv  fixtures.json  predictions.json  ratings_elo.json  team_ratings.csv  team_strengths.json  tips.json  understat_team_matches.json
data/history/: preds_20250816T213130.034913+0000.json  preds_20250816T222732.372536+0000.json  preds_20250816T224214.367790+0000.json  preds_20250816T224709.536675+0000.json  preds_20250816T225917.681085+0000.json
data/metrics/: calibration.json  match_level.csv  rolling_summary.json
plpred/: __init__.py  elo.py  fd_client.py  log.py  predict.py  ratings.py
reports/: PR_BODY.md  fixtures_fetch_debug.json  name_resolution.json
scripts/: archive_predictions.py  compute_team_strengths.py  core_build_ratings.py  core_fetch.py  core_generate.py  evaluate_backtest.py  fetch_fd_results.py  fetch_understat_xg.py  generate.py  model.py  pro_generate.py  smoke.py  sources.py  strengths_xg.py  team_names.py  update_ratings_elo.py
tests/: test_elo.py  test_fd_client.py  test_predict.py  test_ratings.py
